--- a/src/pages/mlip.mdx
+++ b/src/pages/mlip.mdx
@@ -1,3 +1,3 @@
 <div style="background-image: radial-gradient(circle, #051937, #004d7a, #008793, #00bf72, #a8eb12 100%);">
-<iframe src="https://docs.google.com/a/lasdk8.org/presentation/d/e/2PACX-1vSubESvAlzpjIPs1GXF_jKvOdz7KXWwt6jsCYTzp67to0vUauupP1_btmkF9VaFRWeWWI0mpA9G_zoe/embed?start=false&loop=false&delayms=5000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+<iframe src="https://docs.google.com/a/lasdk8.org/presentation/d/e/2PACX-1vSubESvAlzpjIPs1GXF_jKvOdz7KXWwt6jsCYTzp67to0vUauupP1_btmkF9VaFRWeWWI0mpA9G_zoe/embed?start=false&loop=false&delayms=5000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" width="800" height="800" style="display:block;margin:auto"></iframe>
 </div>
