--- a/src/pages/aboutmeposter.mdx
+++ b/src/pages/aboutmeposter.mdx
@@ -31,6 +31,6 @@ import { colors } from '../../tailwind'
     {/* <SVG icon="hexa" width={16} stroke={colors['grey-darker']} left="10%" top="50%" /> */}
     <SVG icon="hexa" width={8} stroke={colors['grey-darker']} left="80%" top="70%" />
   </div>
+  <img src="https://github.com/mjaydenkim/portfolio/blob/master/src/images/Webp.net-resizeimage.jpg" alt="Poster about me">
 </div>
 
-![alt text](https://github.com/mjaydenkim/portfolio/blob/master/src/images/Webp.net-resizeimage.jpg "My Poster")
