--- a/src/pages/aboutmeposter.mdx
+++ b/src/pages/aboutmeposter.mdx
@@ -3,6 +3,9 @@ import SVG from '../components/SVG'
 import { UpDown, UpDownWide } from '../styles/animations'
 import { colors } from '../../tailwind'
 
+
+![](../images/Webp.net-resizeimage.jpg)
+
 <div style="z-index:0;position:relative;background-color:black;box-sizing:border-box;">
   <div style='z-index:-1;position:relative;height:50vh;width:85vw;margin-bottom:-50vh;'>
     <UpDown>
@@ -31,6 +34,5 @@ import { colors } from '../../tailwind'
     {/* <SVG icon="hexa" width={16} stroke={colors['grey-darker']} left="10%" top="50%" /> */}
     <SVG icon="hexa" width={8} stroke={colors['grey-darker']} left="80%" top="70%" />
   </div>
-  <img src="../images/Webp.net-resizeimage.jpg" alt="Poster about me"/>
 </div>
 
