--- a/src/pages/aboutmeposter.mdx
+++ b/src/pages/aboutmeposter.mdx
@@ -2,9 +2,7 @@
 import SVG from '../components/SVG'
 import { UpDown, UpDownWide } from '../styles/animations'
 import { colors } from '../../tailwind'
-
-
-![](../images/Webp.net-resizeimage.jpg)
+import poster from '../images/aboutmeposter.jpg'
 
 <div style="z-index:0;position:relative;background-color:black;box-sizing:border-box;">
   <div style='z-index:-1;position:relative;height:50vh;width:85vw;margin-bottom:-50vh;'>
@@ -34,5 +32,6 @@ import { colors } from '../../tailwind'
     {/* <SVG icon="hexa" width={16} stroke={colors['grey-darker']} left="10%" top="50%" /> */}
     <SVG icon="hexa" width={8} stroke={colors['grey-darker']} left="80%" top="70%" />
   </div>
+  <img src={poster} />
 </div>
 
