--- a/src/pages/thishaikuistrash.mdx
+++ b/src/pages/thishaikuistrash.mdx
@@ -1,7 +1,7 @@
 import SVG from '../components/SVG'
 import { UpDown, UpDownWide } from '../styles/animations'
 import { colors } from '../../tailwind'
-import poster from '../images/thishaikuistrash.jpg'
+import poster from '../images/haiku1.jpg'
 
 <div style="z-index:0;position:relative;background-color:black;box-sizing:border-box;">
   <div style='z-index:-1;position:relative;height:50vh;width:85vw;margin-bottom:-50vh;'>
