--- a/src/pages/haiktsu.mdx
+++ b/src/pages/haiktsu.mdx
@@ -31,5 +31,5 @@ import poster from '../images/haiku2.jpg'
     {/* <SVG icon="hexa" width={16} stroke={colors['grey-darker']} left="10%" top="50%" /> */}
     <SVG icon="hexa" width={8} stroke={colors['grey-darker']} left="80%" top="70%" />
   </div>
-  <img src={poster} style="display:block;margin:auto" width="1000" height="1500"/>
+  <img src={poster} style="display:block;margin:auto"/>
 </div>
