--- a/src/pages/sonnet.mdx
+++ b/src/pages/sonnet.mdx
@@ -37,13 +37,13 @@ import { colors } from '../../tailwind'
 <article style="color: white; padding: 2em; font-family: 'Coming Soon', cursive;">
 
 ## A bit ago, I got my first Rubik’s Cube.
-I sat on the bed, trying to solve it.
-My brain overloaded, I watched YouTube, The scramble almost made me throw a fit.
-When I got back home from my vacation, The attempts surely didn’t stop flowing.
-The only thing I felt was frustration,
-Days became weeks with no results showing.
-Finally, after those long, irking weeks,
-I finished my very first Rubik’s Cube.
-I successfully used the right techniques, I was not any longer a cubing noob.
-I later worked hard and improved my times, Yay, it’s done! Now I do not have to rhyme.
+I sat on the bed, trying to solve it. <br/>
+My brain overloaded, I watched YouTube, The scramble almost made me throw a fit. <br/>
+When I got back home from my vacation, The attempts surely didn’t stop flowing. <br/>
+The only thing I felt was frustration, <br/>
+Days became weeks with no results showing. <br/>
+Finally, after those long, irking weeks, <br/>
+I finished my very first Rubik’s Cube. <br/>
+I successfully used the right techniques, I was not any longer a cubing noob. <br/>
+I later worked hard and improved my times, Yay, it’s done! Now I do not have to rhyme. <br/>
 </article>
