--- a/src/pages/creativewriting.mdx
+++ b/src/pages/creativewriting.mdx
@@ -70,4 +70,4 @@ Midoriya looked at Eri, who was sweating furiously.  <br/>
 “Now that I’ve experienced how it feels, I understand…! She continues to revert my body with blinding speed… In that case, if I’m constantly accumulating grave injuries at an even greater speed…” Motivation was back in for Izuku as he realized that with Eri by his side, he could fight with all the power he had.  <br/>
 He activated his 100% power, fighting with all of his power. <br/>
 “Eri, will you lend me a hand?” <br/>
-
+</article>
