--- a/src/pages/topics.mdx
+++ b/src/pages/topics.mdx
@@ -13,6 +13,6 @@ import MyFrame from '../components/aboutme-iframe'
         2. Beat Saber
         3. Super Smash Bros. Ultimate
     3. Reddit
-        1. [r/MurderedByWords](reddit.com/r/murderedbywords)
-        2. [r/ProgrammerHumor](reddit.com/r/programmerhumor)
-        3. [r/MildlyInteresting](reddit.com/r/mildlyinteresting)
+        1. [r/MurderedByWords](https://reddit.com/r/murderedbywords)
+        2. [r/ProgrammerHumor](https://reddit.com/r/programmerhumor)
+        3. [r/MildlyInteresting](https://reddit.com/r/mildlyinteresting)
