--- a/src/pages/switch.mdx
+++ b/src/pages/switch.mdx
@@ -5,5 +5,11 @@ import MyFrame from '../components/aboutme-iframe'
 
 <article style="color: black; padding: 2em; font-family: 'Coming Soon', cursive;">
 The Nintendo Switch, as it is now known, is a portable and home gaming console, designed to be played both on the big screen and on the small portable one. It is the first of its kind. The first details about it were revealed on March 17, 2015. At a Nintendo press conference, Nintendo unveiled a deal to make mobile games. They also told viewers that they had a brand-new gaming machine in the works. An English audio translation of the press conference states, "Nintendo is currently developing a dedicated games platform with a brand new concept under the development codename NX.” They stated it was too early to elaborate on details but that more information would be shared “next year.” However, on December 3, 2015, the new president of Nintendo, Tatsumi Kimishima, who took over for Satoru Iwata who had died, revealed more information about the NX. He said that the device won’t be just a new take on the Wii like the Wii U had been. He said it would be something “unique and different.” Some had started to speculate that it would be a mobile-console hybrid based on analyst reports. <br/>
-The next year, a lot more information was revealed about the Nintendo NX. On October 20, 2016, Nintendo uploaded a video called, “First Look at Nintendo Switch.” It revealed its official name and the first official view of the console, as well as games that would be featured on its platform. It was also confirmed to be a hybrid device. They planned to have events in 2017 to reveal more about the console. However, in December of 2016, Jimmy Fallon was able to try out Zelda: Breath of the Wild live on The Tonight Show as well as reveal more about the console. On January 12, 2017, Nintendo livestreamed an event from Tokyo revealing more information about the Switch. Many games that would be played were shown, as well as a lot of the hardware and technology of the Switch. The following day, a Nintendo Treehouse video was put out that showed the full launch lineup of games for the Switch. The Switch was officially released on March 3, 2017 worldwide, at a US price of $299.99. 
+The next year, a lot more information was revealed about the Nintendo NX. On October 20, 2016, Nintendo uploaded a video called, “First Look at Nintendo Switch.” It revealed its official name and the first official view of the console, as well as games that would be featured on its platform. It was also confirmed to be a hybrid device. They planned to have events in 2017 to reveal more about the console. However, in December of 2016, Jimmy Fallon was able to try out Zelda: Breath of the Wild live on The Tonight Show as well as reveal more about the console. On January 12, 2017, Nintendo livestreamed an event from Tokyo revealing more information about the Switch. Many games that would be played were shown, as well as a lot of the hardware and technology of the Switch. The following day, a Nintendo Treehouse video was put out that showed the full launch lineup of games for the Switch. The Switch was officially released on March 3, 2017 worldwide, at a US price of $299.99. <br/>
+Sources: <br/>
+[Source 1](https://www.cnet.com/news/mario-set-for-smartphones-as-nintendo-forges-new-mobile-deal/) <br/>
+[Source 2](https://www.youtube.com/watch?v=o6j1ww12UxE) <br/>
+[Source 3](https://arstechnica.com/gaming/2016/12/miyamoto-lands-on-late-night-tv-with-nintendo-switch-reveal-and-guitar-riffs/) <br/>
+[Source 4](https://www.bloomberg.com/news/articles/2016-10-28/nintendo-s-big-switch-q-a-with-president-tatsumi-kimishima) <br/>
+[Source 5(https://en.wikipedia.org/wiki/Nintendo_Switch) <br/>
 </article>
