--- a/src/pages/switch.mdx
+++ b/src/pages/switch.mdx
@@ -13,4 +13,4 @@ Sources: <br/>
 [Source 2](https://www.youtube.com/watch?v=o6j1ww12UxE) <br/>
 [Source 3](https://arstechnica.com/gaming/2016/12/miyamoto-lands-on-late-night-tv-with-nintendo-switch-reveal-and-guitar-riffs/) <br/>
 [Source 4](https://www.bloomberg.com/news/articles/2016-10-28/nintendo-s-big-switch-q-a-with-president-tatsumi-kimishima) <br/>
-[Source 5(https://en.wikipedia.org/wiki/Nintendo_Switch) <br/>
+[Source 5](https://en.wikipedia.org/wiki/Nintendo_Switch) <br/>
