--- a/src/pages/musicvideo.mdx
+++ b/src/pages/musicvideo.mdx
@@ -30,5 +30,5 @@ import { colors } from '../../tailwind'
     {/* <SVG icon="hexa" width={16} stroke={colors['grey-darker']} left="10%" top="50%" /> */}
     <SVG icon="hexa" width={8} stroke={colors['grey-darker']} left="80%" top="70%" />
   </div>
-  <iframe width="1120" height="630" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/psga2vi-3Do" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="display:block;margin:auto"></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/psga2vi-3Do" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
