--- a/src/pages/facemerges.mdx
+++ b/src/pages/facemerges.mdx
@@ -30,5 +30,5 @@ import { colors } from '../../tailwind'
     {/* <SVG icon="hexa" width={16} stroke={colors['grey-darker']} left="10%" top="50%" /> */}
     <SVG icon="hexa" width={8} stroke={colors['grey-darker']} left="80%" top="70%" />
   </div>
-  <blockquote class="imgur-embed-pub" lang="en" data-id="a/sYDcnAo"><a href="//imgur.com/sYDcnAo"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+  <blockquote class="imgur-embed-pub" lang="en" data-id="a/sYDcnAo" data-context="false"><a href="//imgur.com/sYDcnAo"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
 </div>
