--- a/src/pages/facemerges.mdx
+++ b/src/pages/facemerges.mdx
@@ -2,6 +2,6 @@ import SVG from '../components/SVG'
 import { UpDown, UpDownWide } from '../styles/animations'
 import { colors } from '../../tailwind'
 
-<div style="z-index:0;position:relative;background-color:black;box-sizing:border-box;">
+<div>
   <blockquote class="imgur-embed-pub" lang="en" data-id="a/sYDcnAo" data-context="false"><a href="//imgur.com/sYDcnAo"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
 </div>
