--- a/src/pages/facemerges.mdx
+++ b/src/pages/facemerges.mdx
@@ -1,7 +1,45 @@
+
 import SVG from '../components/SVG'
 import { UpDown, UpDownWide } from '../styles/animations'
 import { colors } from '../../tailwind'
+import hand from '../images/hand.jpg'
+import pie from '../images/aboutmeposter.jpg'
+import gom from '../images/griffinonmatthew.jpg'
+import mog from '../images/matthewongriffin.jpg'
+import ftf from '../images/findtheface.jpg'
 
-<div>
-  <blockquote class="imgur-embed-pub" lang="en" data-id="a/sYDcnAo" data-context="false"><a href="//imgur.com/sYDcnAo"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+<div style="z-index:0;position:relative;background-color:black;box-sizing:border-box;">
+  <div style='z-index:-1;position:relative;height:50vh;width:85vw;margin-bottom:-50vh;'>
+    <UpDown>
+      <SVG icon="triangle" hiddenMobile width={48} stroke={colors.orange} left="5%" top="20%" />
+      <SVG icon="hexa" width={48} stroke={colors.red} left="60%" top="70%" />
+      <SVG icon="box" width={6} fill={colors['grey-darker']} left="30%" top="50%" />
+      <SVG icon="circle" width={64} fill={colors.green} left="95%" top="5%" />
+    </UpDown>
+    <UpDownWide>
+      <SVG icon="arrowUp" hiddenMobile width={16} fill={colors['blue-dark']} left="80%" top="10%" />
+      <SVG icon="triangle" width={12} stroke={colors.white} left="90%" top="50%" />
+      <SVG icon="circle" width={16} fill={colors['grey-darker']} left="70%" top="90%" />
+      <SVG icon="triangle" width={16} stroke={colors['grey-darkest']} left="30%" top="65%" />
+      <SVG icon="circle" width={6} fill={colors['grey-darkest']} left="75%" top="10%" />
+      <SVG icon="upDown" hiddenMobile width={8} fill={colors['grey-darkest']} left="45%" top="10%" />
+      <SVG icon="box" hiddenMobile width={48} fill={colors.purple} left="5%" top="70%" />
+    </UpDownWide>
+    <SVG icon="circle" hiddenMobile width={24} fill={colors['grey-darker']} left="5%" top="70%" />
+    <SVG icon="circle" width={6} fill={colors['grey-darkest']} left="4%" top="20%" />
+    <SVG icon="circle" width={12} fill={colors['grey-darkest']} left="50%" top="60%" />
+    <SVG icon="upDown" width={8} fill={colors['grey-darkest']} left="95%" top="90%" />
+    <SVG icon="upDown" hiddenMobile width={24} fill={colors['grey-darker']} left="40%" top="80%" />
+    <SVG icon="triangle" width={8} stroke={colors['grey-darker']} left="25%" top="5%" />
+    <SVG icon="box" width={6} fill={colors['grey-darkest']} left="10%" top="10%" />
+    <SVG icon="box" width={12} fill={colors['grey-darkest']} left="40%" top="30%" />
+    {/* <SVG icon="hexa" width={16} stroke={colors['grey-darker']} left="10%" top="50%" /> */}
+    <SVG icon="hexa" width={8} stroke={colors['grey-darker']} left="80%" top="70%" />
+  </div>
+  <img src={hand} />
+  <img src={pie} />
+  <img src={gom} />
+  <img src={mog} />
+  <img src={ftf} />
 </div>
+
