--- a/src/pages/facemerges.mdx
+++ b/src/pages/facemerges.mdx
@@ -3,7 +3,7 @@ import SVG from '../components/SVG'
 import { UpDown, UpDownWide } from '../styles/animations'
 import { colors } from '../../tailwind'
 import hand from '../images/hand.jpg'
-import pie from '../images/aboutmeposter.jpg'
+import pie from '../images/pie.jpg'
 import gom from '../images/griffinonmatthew.jpg'
 import mog from '../images/matthewongriffin.jpg'
 import ftf from '../images/findtheface.jpg'
